// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiContextMenu can pass-through horizontal rule props 1`] = `
<div
  class="ouiContextMenu"
>
  <div
    class="ouiContextMenuPanel ouiContextMenu__panel"
    tabindex="-1"
  >
    <div
      class="ouiContextMenuPanelTitle"
    >
      <span
        class="ouiContextMenu__itemLayout"
      >
        Testing separator
      </span>
    </div>
    <div>
      <div>
        <hr
          class="ouiHorizontalRule ouiHorizontalRule--half ouiHorizontalRule--marginSmall"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`OuiContextMenu is rendered 1`] = `
<div
  aria-label="aria-label"
  class="ouiContextMenu testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`OuiContextMenu panel item can be a separator line 1`] = `
<div
  class="ouiContextMenu"
>
  <div
    class="ouiContextMenuPanel ouiContextMenu__panel"
    tabindex="-1"
  >
    <div
      class="ouiContextMenuPanelTitle"
    >
      <span
        class="ouiContextMenu__itemLayout"
      >
        Testing separator
      </span>
    </div>
    <div>
      <div>
        <button
          class="ouiContextMenuItem"
          type="button"
        >
          <span
            class="ouiContextMenu__itemLayout"
          >
            <span
              class="ouiContextMenuItem__text"
            >
              Foo
            </span>
          </span>
        </button>
        <hr
          class="ouiHorizontalRule ouiHorizontalRule--full"
        />
        <button
          class="ouiContextMenuItem"
          type="button"
        >
          <span
            class="ouiContextMenu__itemLayout"
          >
            <span
              class="ouiContextMenuItem__text"
            >
              Bar
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`OuiContextMenu panel item can contain JSX 1`] = `
<div
  class="ouiContextMenu"
>
  <div
    class="ouiContextMenuPanel ouiContextMenu__panel"
    tabindex="-1"
  >
    <div
      class="ouiContextMenuPanelTitle"
    >
      <span
        class="ouiContextMenu__itemLayout"
      >
        3
      </span>
    </div>
    <div>
      <div>
        <button
          class="ouiContextMenuItem"
          type="button"
        >
          <span
            class="ouiContextMenu__itemLayout"
          >
            <span
              class="ouiContextMenuItem__text"
            >
              <span
                style="color:tomato"
              >
                foo
              </span>
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`OuiContextMenu props panels and initialPanelId allows you to click the title button to go back to the previous panel 1`] = `
<div
  class="ouiContextMenu"
  style="height: 0px;"
>
  <div
    class="ouiContextMenuPanel ouiContextMenu__panel"
    tabindex="-1"
  >
    <button
      class="ouiContextMenuPanelTitle"
      data-test-subj="contextMenuPanelTitleButton"
      type="button"
    >
      <span
        class="ouiContextMenu__itemLayout"
      >
        <span
          class="ouiContextMenu__icon"
          data-ouiicon-type="arrowLeft"
        />
        <span
          class="ouiContextMenu__text"
        >
          2
        </span>
      </span>
    </button>
    <div>
      <div>
        <div>
          2
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`OuiContextMenu props panels and initialPanelId allows you to click the title button to go back to the previous panel 2`] = `
<div
  class="ouiContextMenu"
  style="height: 0px; width: 400px;"
>
  <div
    class="ouiContextMenuPanel ouiContextMenu__panel ouiContextMenuPanel-txOutRight"
    tabindex="-1"
  >
    <button
      class="ouiContextMenuPanelTitle"
      data-test-subj="contextMenuPanelTitleButton"
      type="button"
    >
      <span
        class="ouiContextMenu__itemLayout"
      >
        <span
          class="ouiContextMenu__icon"
          data-ouiicon-type="arrowLeft"
        />
        <span
          class="ouiContextMenu__text"
        >
          2
        </span>
      </span>
    </button>
    <div>
      <div>
        <div>
          2
        </div>
      </div>
    </div>
  </div>
  <div
    class="ouiContextMenuPanel ouiContextMenu__panel ouiContextMenuPanel-txInRight"
    tabindex="-1"
  >
    <button
      class="ouiContextMenuPanelTitle"
      data-test-subj="contextMenuPanelTitleButton"
      type="button"
    >
      <span
        class="ouiContextMenu__itemLayout"
      >
        <span
          class="ouiContextMenu__icon"
          data-ouiicon-type="arrowLeft"
        />
        <span
          class="ouiContextMenu__text"
        >
          1
        </span>
      </span>
    </button>
    <div>
      <div>
        <button
          class="ouiContextMenuItem"
          type="button"
        >
          <span
            class="ouiContextMenu__itemLayout"
          >
            <span
              class="ouiContextMenuItem__text"
            >
              2a
            </span>
            <span
              class="ouiContextMenu__arrow"
              data-ouiicon-type="arrowRight"
            />
          </span>
        </button>
        <button
          class="ouiContextMenuItem"
          type="button"
        >
          <span
            class="ouiContextMenu__itemLayout"
          >
            <span
              class="ouiContextMenuItem__text"
            >
              2b
            </span>
            <span
              class="ouiContextMenu__arrow"
              data-ouiicon-type="arrowRight"
            />
          </span>
        </button>
        <button
          class="ouiContextMenuItem"
          type="button"
        >
          <span
            class="ouiContextMenu__itemLayout"
          >
            <span
              class="ouiContextMenuItem__text"
            >
              2c
            </span>
            <span
              class="ouiContextMenu__arrow"
              data-ouiicon-type="arrowRight"
            />
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`OuiContextMenu props panels and initialPanelId renders the referenced panel 1`] = `
<div
  class="ouiContextMenu"
>
  <div
    class="ouiContextMenuPanel ouiContextMenu__panel"
    tabindex="-1"
  >
    <button
      class="ouiContextMenuPanelTitle"
      data-test-subj="contextMenuPanelTitleButton"
      type="button"
    >
      <span
        class="ouiContextMenu__itemLayout"
      >
        <span
          class="ouiContextMenu__icon"
          data-ouiicon-type="arrowLeft"
        />
        <span
          class="ouiContextMenu__text"
        >
          2
        </span>
      </span>
    </button>
    <div>
      <div>
        <div>
          2
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`OuiContextMenu props size m is rendered 1`] = `
<div
  class="ouiContextMenu"
>
  <div
    class="ouiContextMenuPanel ouiContextMenu__panel"
    tabindex="-1"
  >
    <button
      class="ouiContextMenuPanelTitle"
      data-test-subj="contextMenuPanelTitleButton"
      type="button"
    >
      <span
        class="ouiContextMenu__itemLayout"
      >
        <span
          class="ouiContextMenu__icon"
          data-ouiicon-type="arrowLeft"
        />
        <span
          class="ouiContextMenu__text"
        >
          2
        </span>
      </span>
    </button>
    <div>
      <div>
        <div>
          2
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`OuiContextMenu props size s is rendered 1`] = `
<div
  class="ouiContextMenu ouiContextMenu--small"
>
  <div
    class="ouiContextMenuPanel ouiContextMenu__panel"
    tabindex="-1"
  >
    <button
      class="ouiContextMenuPanelTitle ouiContextMenuPanelTitle--small"
      data-test-subj="contextMenuPanelTitleButton"
      type="button"
    >
      <span
        class="ouiContextMenu__itemLayout"
      >
        <span
          class="ouiContextMenu__icon"
          data-ouiicon-type="arrowLeft"
        />
        <span
          class="ouiContextMenu__text"
        >
          2
        </span>
      </span>
    </button>
    <div>
      <div>
        <div>
          2
        </div>
      </div>
    </div>
  </div>
</div>
`;
